# uv-torch

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml
.github/workflows/: pages.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  update_cache.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  seed-volume.sh  vite.config.js
frontend/public/: pytorch_info.json
frontend/src/: app.js  main.js  style.scss
frontend/src/services/: dataService.js  dropdownService.js  generatorService.js  selectionService.js  uiService.js
frontend/src/utils/: index.js
scripts/: derive-endpoint.sh  derive-pages-endpoint.sh
traefik/: docker-compose.yaml
