[project]
name = "torch-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "torch-wheel-index>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
]

[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "mypy>=1.15.0",
]
